# OOHAL

./: .gitignore  CMakeLists.txt  README.md  buildAndRun.sh  main.cpp
cmake/: Toolchain-arm-gcc.cmake
core/STM32L476/include/: stm32l4xx.h
core/STM32L476/source/: CMakeLists.txt
